Sat Aug  9 20:06:57 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-namespace.cc sfidl-parser.*: fix parsing type names from
	different namespaces (such as Foo::Bar).
	don't generate code after printing parse errors.

	* sfidl.h: remove using namespace std; from header

Sat Aug  9 17:29:45 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.cc: support string concatenation in {I|J|O}Stream
	parsing.

Thu Jul 31 18:09:23 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.[hc]*: conditionalize generated code into
	source and header file stuff.

Wed Jul 30 05:17:56 2003  Tim Janik  <timj@gtk.org>

	* sfidl-options.[hc]*: add --module code generation option.

	* sfidl-parser.[hc]*: implement {I|J|O}Stream parsing.

	* sfidl.[hc]*: export 	C code generator since it implements
	functionality needed by the other code generators (needs to be fixed).

	* sfidl-module.[hc]*: implement plugin module code generator.

	* sfitypes.h: introduce SfiString.

Mon Jul 28 05:21:01 2003  Tim Janik  <timj@gtk.org>

	* toyprof.c: fix evaluation of config macro TOYPROF_PENTIUM, reported
	by Sam Hocevar <sam@zoy.org>.

Fri Jul 25 17:17:52 2003  Stefan Westerfeld <stefan@space.twc.de>

	* sfidl-parser.*: adapted prototyping to work in cases where the full
	definition of a choice/class/record/sequence is not contained in the
	idl file at all

Wed Jul 23 02:05:24 2003  Tim Janik  <timj@gtk.org>

	* sficomport.c: reset pfd.events to 0 once the fd becomes -1.

Wed Jul 23 19:19:36 2003  Stefan Westerfeld <stefan@space.twc.de>

	* sfidl*.cc sfidl*.h: cleanup of class names.
	support prototyping for choices, records and sequences, like
	choice ChoiceDefinedLater;

Thu Jul 17 04:00:12 2003  Tim Janik  <timj@gtk.org>

	* sfidl-namespace.cc: make unknown symbols an error.

Mon Jul 14 16:59:25 2003  Tim Janik  <timj@gtk.org>

	* sficomport.c: guard against systems not having ERESTART.

Mon Jul 14 16:43:20 2003  Tim Janik  <timj@gtk.org>
